298 asyncapi interpreting of property const not possible (#306)